--- a/chamber/styles/join.css
+++ b/chamber/styles/join.css
@@ -191,3 +191,8 @@ header nav ul li a.active {
         color: var(--black);
     }
 }
+
+html, body {
+    overflow-x: hidden;
+    width: 100%;
+}
