--- a/chamber/styles/join-large.css
+++ b/chamber/styles/join-large.css
@@ -7,12 +7,12 @@
 }
 
 :root {
-    --white: #f7fafa;
+    --white: #f7f9f9;
     --p-background: #000004;
     --s-background: #060404;
-    --highlight: #F1C40F;
+    --highlight: #dcc682;
     --black: #000;
-    --ash: #a72424;
+    --ash: #ac1b1b;
 }
 
 /* HEADER */
@@ -257,7 +257,7 @@ header .user-profile {
     border: none;
     border-radius: 4px;
     background-color: var(--p-background);
-    color: #e46060;
+    color: #b5031e;
     cursor: pointer;
     font-size: 18px;
 }
@@ -281,7 +281,7 @@ header .user-profile {
 .member-card-container .business-card {
     background-color: var(--white);
     border-radius: 4px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px rgba(164, 44, 44, 0.1);
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
